--- a/section3/tsconfig.json
+++ b/section3/tsconfig.json
@@ -1,15 +1,14 @@
 {
-  "include": ["src"],
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
     "outDir": "dist",
     "strict": true,
     "moduleDetection": "force",
-    "skipLibCheck": true,
-    "strictNullChecks": true
+    "skipLibCheck": true
   },
   "ts-node": {
     "esm": true
-  }
+  },
+  "include": ["src"]
 }
