--- a/section12templetets/package.json
+++ b/section12templetets/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "section11reactts",
+  "name": "section12templetets",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,12 +7,6 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^29.5.14",
-    "@types/lodash": "^4.17.17",
-    "@types/node": "^24.0.0",
-    "@types/react": "^19.1.7",
-    "@types/react-dom": "^19.1.6",
-    "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
